vlib/v/checker/tests/call_empty_or_block_err.out
vlib/v/checker/tests/call_empty_or_block_err.vv:21:2: warning: unused variable: `a`
   19 | 
   20 | fn main() {
   21 |     a := foo() or { foo() or {} }
      |     ^
   22 | 
   23 |     // must be error
vlib/v/checker/tests/call_empty_or_block_err.vv:24:2: warning: unused variable: `y`
   22 | 
   23 |     // must be error
   24 |     y := if c := foo() {
      |     ^
   25 |         dump(c)
   26 |         bar() or {}
vlib/v/checker/tests/call_empty_or_block_err.vv:32:2: warning: unused variable: `z`
   30 | 
   31 |     // ok
   32 |     z := if d := foo() {
      |     ^
   33 |         dump(d)
   34 |         bar() or {}
vlib/v/checker/tests/call_empty_or_block_err.vv:41:2: warning: unused variable: `w`
   39 | 
   40 |     // ok
   41 |     w := foo() or {
      |     ^
   42 |         bar() or {}
   43 |         false
vlib/v/checker/tests/call_empty_or_block_err.vv:47:2: warning: unused variable: `b`
   45 | 
   46 |     // ok
   47 |     b := foo() or {
      |     ^
   48 |         foo() or {}
   49 |         false
vlib/v/checker/tests/call_empty_or_block_err.vv:10:22: error: expression requires a non empty `or {}` block
    8 | 
    9 | fn unwrap_function1() ?int {
   10 |     return unwrap_int() or { }
      |                         ~~~~~~
   11 | }
   12 |
vlib/v/checker/tests/call_empty_or_block_err.vv:14:27: error: `or` block must provide a value of type `int`, not `none`
   12 | 
   13 | fn unwrap_function2() ?int {
   14 |     return unwrap_int() or { none }
      |                              ~~~~
   15 | }
   16 |
vlib/v/checker/tests/call_empty_or_block_err.vv:21:24: error: expression requires a non empty `or {}` block
   19 | 
   20 | fn main() {
   21 |     a := foo() or { foo() or {} }
      |                           ~~~~~
   22 | 
   23 |     // must be error
vlib/v/checker/tests/call_empty_or_block_err.vv:26:9: error: expression requires a non empty `or {}` block
   24 |     y := if c := foo() {
   25 |         dump(c)
   26 |         bar() or {}
      |               ~~~~~
   27 |     } else {
   28 |         false
vlib/v/checker/tests/call_empty_or_block_err.vv:26:3: error: the final expression in `if` or `match`, must have a value of a non-void type
   24 |     y := if c := foo() {
   25 |         dump(c)
   26 |         bar() or {}
      |         ~~~~~
   27 |     } else {
   28 |         false
